# RTES-project

./: CMakeLists.txt  README.md  audio_off.m4a  audio_on.m4a  keyword_spotter.py  main.py
